--- a/src/main/resources/ru/javabegin/training/javafx/fxml/main.fxml
+++ b/src/main/resources/ru/javabegin/training/javafx/fxml/main.fxml
@@ -1,14 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import org.controlsfx.control.textfield.CustomTextField?>
 <?import java.net.URL?>
 <VBox fx:id="parent" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" styleClass="background" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.training.javafx.controllers.MainController">
     <children>
-
-
+        <HBox maxHeight="50.0" prefHeight="100.0">
+            <children>
+                <Button fx:id="btnAdd" minWidth="80.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefWidth="150.0" styleClass="orange-flat-button" text="%add">
+                    <HBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="btnEdit" minWidth="80.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefWidth="150.0" text="%edit">
+                    <HBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="btnDelete" minWidth="80.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefWidth="150.0" text="%delete">
+                    <HBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                    </HBox.margin>
+                </Button>
+            </children>
+        </HBox>
+        <AnchorPane maxHeight="30.0" prefHeight="100.0">
+            <children>
+                <CustomTextField fx:id="txtSearch" layoutY="5.0" prefHeight="31.0" prefWidth="283.0" styleClass="search-text-field" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="140.0" />
+                <Button fx:id="btnSearch" layoutX="266.0" mnemonicParsing="false" onAction="#actionSearch" text="%search" AnchorPane.rightAnchor="0.0" />
+            </children>
+            <VBox.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </VBox.margin>
+        </AnchorPane>
+        <AnchorPane prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+            <children>
+                <TableView fx:id="tableAddressBook" prefHeight="400.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                        <TableColumn fx:id="columnFIO" minWidth="200.0" prefWidth="200.0" text="%fio" />
+                        <TableColumn fx:id="columnPhone" minWidth="200.0" prefWidth="200.0" text="%phone" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+            <VBox.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </VBox.margin>
+        </AnchorPane>
+        <AnchorPane prefHeight="30.0" prefWidth="200.0">
+            <children>
+                <Label fx:id="labelCount" text="%count" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+                <ComboBox fx:id="comboLocales" layoutX="229.0" layoutY="-1.0" prefHeight="31.0" prefWidth="144.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            </children>
+            <VBox.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </VBox.margin>
+        </AnchorPane>
     </children>
-<stylesheets>
-    <URL value="@main.css" />
-</stylesheets>
+    <stylesheets>
+        <URL value="@main.css" />
+    </stylesheets>
 
 </VBox>
